Correction du bug de l'affichage de méthode DétaillerEmpreinte.